040-api-arch-re-design/petstore-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petstore-ingress
spec:
  rules:
  - host: petstore.host
    http:
      paths:
      - path: /
        backend:
          serviceName: petstore-service
          servicePort: 80
